demo-frontend-server-boilerplate/.happypack/s--6783811
SyntaxError: Unexpected token (14:2)

[0m [90m 12 | [39m
 [90m 13 | [39m[33mReactDOM[39m[33m.[39mrender((
[31m[1m>[22m[39m[90m 14 | [39m  [33m<[39m[33mRoot[39m store[33m=[39m{store} [33m/[39m[33m>[39m
 [90m    | [39m  [31m[1m^[22m[39m
 [90m 15 | [39m)[33m,[39m document[33m.[39mgetElementById([32m'react-root'[39m))[33m;[39m
 [90m 16 | [39m[0m

Error
    at transpile (/Users/ouyangcharles/git/incubator/demo-frontend-server-boilerplate/node_modules/babel-loader/lib/index.js:52:13)
    at Object.module.exports (/Users/ouyangcharles/git/incubator/demo-frontend-server-boilerplate/node_modules/babel-loader/lib/index.js:133:12)
    at applySyncOrAsync (/Users/ouyangcharles/git/incubator/demo-frontend-server-boilerplate/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/ouyangcharles/git/incubator/demo-frontend-server-boilerplate/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /Users/ouyangcharles/git/incubator/demo-frontend-server-boilerplate/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/Users/ouyangcharles/git/incubator/demo-frontend-server-boilerplate/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/Users/ouyangcharles/git/incubator/demo-frontend-server-boilerplate/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/Users/ouyangcharles/git/incubator/demo-frontend-server-boilerplate/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/Users/ouyangcharles/git/incubator/demo-frontend-server-boilerplate/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/Users/ouyangcharles/git/incubator/demo-frontend-server-boilerplate/node_modules/happypack/lib/HappyWorker.js:32:3)